Builds/buildsets/Jobs: optimizations and fixes
Builds/Buildsets endpoint: Do not aggregate data anymore, fixes

The endpoints differentiate finished builds/buildsets and running
or queued ones. This is to improve performance, as querying builds
in progress is only needed for stopping a build.
Returned buildsets only hold the ids of the builds they're consisting
of, to limit the time needed to compute a full answer.

Jobs endpoint: fix jobs not being correctly sorted by last run,
or last builds not being sorted by last run either. Reorganize
queries, returned data to speed up the process.
